$Revision$
*********************************************
Changelog
=========
[A] = Added new feature
[B] = Bugfix (fix something that wasn't working as expected)
[C] = Cosmetical fix (layout, typo etc.)
[D] = Documentation improvements
[M] = Maintenance works
[O] = Optimization of code
[S] = Security fix (issues that are related to security)
*********************************************

2010-06-03 [O] Updated Czech language file (user contribution) {eenemeenemuu}
2010-06-02 [B] Fixed ip address dupes on stat_details.php (thread ID 65230) {eenemeenemuu}
2010-06-02 [B] Extended lang_byte_units array for some language files (thread ID 65231) {eenemeenemuu}
2010-06-02 [B] Fixed broken link (thread ID 65226) {eenemeenemuu}
2010-06-02 [M] Release of cpg1.5.4 as initial stable release for the public {GauGau}
2010-06-01 [M] Preparing the release of cpg1.5.4 {GauGau}
2010-06-01 [B] Fixed issue when selecting IM on installation (thread ID 65185) {eenemeenemuu}
2010-06-01 [B] Moved profile button for curve theme (thread ID 65204) {eenemeenemuu}
2010-05-31 [A] Added Ukrainian language file (user contribution) {GauGau}
2010-05-27 [A] Remove outdated guest_tokens (thread ID 62522) {eenemeenemuu}
2010-05-27 [M] Hid album moderation drop down box on modifyalb.php (thread ID 64408) {eenemeenemuu}
2010-05-27 [B] Disabled selection of another album after successful flash upload (thread ID 64310) {eenemeenemuu}
2010-05-27 [B] Fixed blank names when batch adding secondary user group with usermgr.php (thread ID 64410) {eenemeenemuu}
2010-05-27 [B] Fixed sorting categories alphabetically (thread ID 64477) {eenemeenemuu}
2010-05-27 [C] Changed table headers of usermgr.php and reviewcom.php (thread ID 64166) {eenemeenemuu}
2010-05-27 [C] Changed table header of groupmgr.php (thread ID 64407) {eenemeenemuu}
2010-05-26 [B] Fixed clipping of comments (thread ID 64662) {eenemeenemuu}
2010-05-26 [B] Fixed display for regular users if they have no quota {eenemeenemuu}